removing fake posts, changing links, adding picture

--- a/_config.yml
+++ b/_config.yml
@@ -21,5 +21,6 @@ paginate:         5
 # Custom vars
 version:          2.0.0
 
+linkedin:         http://linkedin.com/in/vinniegiarrusso
 github:
   repo:           https://github.com/vingiarrusso
