adds angelist link, changes size of picture, edits config

--- a/_config.yml
+++ b/_config.yml
@@ -22,5 +22,5 @@ paginate:         5
 version:          2.0.0
 
 linkedin:         http://linkedin.com/in/vinniegiarrusso
-github:
-  repo:           https://github.com/vingiarrusso
+github:           https://github.com/vingiarrusso
+angel:            http://www.angel.co/vingiarrusso
