--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 # Setup
 picture:          '<img class="mypic" src="../public/images/me.jpg">'
 title:            Vinnie Giarrusso
-tagline:          'A Jekyll theme'
+tagline:          'San Francisco based Software Engineer'
 description:      'Software Engineer'
 url:              http://hyde.getpoole.com
 
