weird bug happening...?

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ paginate:         5
 # Custom vars
 version:          2.0.0
 
-linkedin:         http://linkedin.com/in/vinniegiarrusso
-github:           https://github.com/vingiarrusso
-angel:            http://www.angel.co/vingiarrusso
+social:
+  linkedin:         http://linkedin.com/in/vinniegiarrusso
+  github:           https://github.com/vingiarrusso
+  angel:            http://www.angel.co/vingiarrusso
